--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 
     <title>Creative Scroll</title>
+    
+    <script src="./libs/gsap.min.js" defer></script>
+    <script src="./libs/ScrollTrigger.min.js" defer></script>
+    <script src="./libs/ScrollSmoother.min.js" defer></script>
+
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/app.js" defer></script>
+
 </head>
 <body>
    
