--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
 
     <title>Creative Scroll</title>
     
@@ -12,11 +10,22 @@
     <script src="./libs/ScrollTrigger.min.js" defer></script>
     <script src="./libs/ScrollSmoother.min.js" defer></script>
 
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/app.js" defer></script>
 
 </head>
 <body>
-   
+
+  <header class="hero">
+    <img class="hero__img" src="./images/hero.png" alt="">
+  </header>
+
+  <div class="container">
+    <div class="main">
+      <h1 class="main__title">creative scroll</h1>
+    </div>
+  </div>
+
 </body>
 </html>
